--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <title>Student Success Portal</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                <li><a href = "studyspaces.html">Study Spaces on Campus</a></li>
+                <li><a href = "foodpantry.html">Food Pantry</a></li>
+                <li><a href = "caps.html">CAPS</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
 
     </header>
-    <main>
+    <main id="main">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
@@ -93,11 +93,11 @@
                 <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
         </section>
-        <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
-        UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
+        <!-- Content taken from ChatGPT 4.0 with the prompt, "I'm designing a website for university of michigan school of information. Help me write the body content for these 3 pages, about 500 words each. Study Spaces on campus, CAPS (Counseling and Psychological Services), Food Pantry (Maize & Blue Cupboard)"
+        ChatGPT 4.0. (2024). [Large language model]. -->
     </main>
     <footer>
         <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+    </footer>
 </body>
 </html>
