--- a/foodpantry.html
+++ b/foodpantry.html
@@ -3,60 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Page 1</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
-    <header>
+    <div class="skip">
+        <a href="#main">Skip to Main Content</a>
+    </div>
+    <header class="header-container">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "studyspaces.html">Study Spaces on Campus</a></li>
-                <li><a href = "foodpantry.html">Food Pantry</a></li>
+                <li class="active"><a href = "foodpantry.html">Food Pantry</a></li>
                 <li><a href = "caps.html">CAPS</a></li>
             </ul>
         </nav>
+        <img class="header-logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <h1>Food Pantry (Maize & Blue Cupboard)</h1>
 
     </header>
-    <main id="main">
+    <main class="container" id = "main">
 
         <img src="images/Food_1.jpg" alt="Shelves of food in the pantry under the Maize and Blue Cupboard sign">
 
         <img src="images/Food_2.jpg" alt="An outdoor sign that says maize and blue cupboard right this way">
 
-        <div>
+        <section>
             <h2>Nourishing Our Community at the University of Michigan</h2>
             <p>The Maize & Blue Cupboard is committed to ensuring that every student at the University of Michigan School of Information has access to nutritious food without worry. Understanding that food security is fundamental to academic and personal success, we provide free, accessible, and nutritious food options to our community.
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Who We Serve</h2>
             <p>The Maize & Blue Cupboard is open to all students, staff, and faculty at the University of Michigan. We believe that access to healthy food is a right, not a privilege, and our services are designed to support anyone in need within our university community.
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>What We Offer</h2>
             <p>
                 <ul>
                     <li>
-                        Food Distribution: We offer a variety of fresh, frozen, and non-perishable items. Students can visit our location on campus to pick up ingredients and ready-to-eat meals.
+                        <h3>Food Distribution:</h3>
+                        <p>We offer a variety of fresh, frozen, and non-perishable items. Students can visit our location on campus to pick up ingredients and ready-to-eat meals.</p>
                     </li>
-                    <li>Nutritional Education: We provide resources and workshops on budget-friendly cooking, nutritional information, and meal planning to empower our community members to make healthy food choices.</li>
                     <li>
-                        Community Engagement: Regular events and volunteer opportunities foster a sense of community and mutual support among users of the food pantry.
+                        <h3>Nutritional Education: </h3>
+                        <p>We provide resources and workshops on budget-friendly cooking, nutritional information, and meal planning to empower our community members to make healthy food choices.</p>
+                        </li>
+                    <li>
+                       <h3>Community Engagement:</h3>
+                        <p>Regular events and volunteer opportunities foster a sense of community and mutual support among users of the food pantry.</p>
                     </li>
                 </ul>
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Visit Us</h2>
             <p>
                 The Maize & Blue Cupboard is located centrally on campus and is open several days a week. Visit our website for current hours, location details, and how to get involved, either as a user or volunteer. Donations are always welcome and greatly appreciated, as they directly support our mission of ending hunger on campus.
 
                 Together, we can create a community where everyone has access to the resources they need to thrive academically and personally at the University of Michigan School of Information.
             </p>
-        </div>
+        </section>
 
     </main>
 
