--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Student Success Portal</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
-    <header>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+    <div class="skip">
+        <a href="#main">Skip to Main Content</a>
+    </div>
+    <header class="header-container">
+        
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li class="active"><a href = "index.html">Home</a></li>
                 <li><a href = "studyspaces.html">Study Spaces on Campus</a></li>
                 <li><a href = "foodpantry.html">Food Pantry</a></li>
                 <li><a href = "caps.html">CAPS</a></li>
             </ul>
         </nav>
+        <img class="header-logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <h1>Student Success Portal</h1>
+        
 
     </header>
-    <main id="main">
+    <main class="container" id = "main">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
@@ -86,11 +92,12 @@
 
             </article>
             <ul>
-                <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
-                <li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
-                <li><strong>Career Services:</strong> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
-                <li><strong>Community Engagement:</strong> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
-                <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
+                <li><h3>Student Organizations:</h3> 
+                    Join one of the many student organizations to connect with peers who share your interests and passions.</li>
+                <li><h3>Arts and Culture:</h3> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
+                <li><h3>Career Services:</h3> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
+                <li><h3>Community Engagement:</h3> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
+                <li><h3>Housing and Dining:</h3> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
         </section>
         <!-- Content taken from ChatGPT 4.0 with the prompt, "I'm designing a website for university of michigan school of information. Help me write the body content for these 3 pages, about 500 words each. Study Spaces on campus, CAPS (Counseling and Psychological Services), Food Pantry (Maize & Blue Cupboard)"
