--- a/index.html
+++ b/index.html
@@ -63,48 +63,58 @@
         <section>
             <h2>Mental Health</h2>
             <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
-            <article>
-                <h3>Counseling and Psychological Services (CAPS):</h3>
-                <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
-            </article>
-            <article>
-                <h3>Wellness Coaching:</h3>
 
-                <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
-            </article>
-            <article>
-                <h3>Mindfulness Resources:</h3>
-
-                <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-            </article>
-            <article>
-                <h3>Support Groups:</h3>
-
-                <p> Join peer support groups for shared experiences and collective coping strategies.</p>
-            </article>
+            <ul>
+                <li><h3>Counseling and Psychological Services (CAPS)</h3> Access individual counseling, group therapy, workshops, and crisis intervention services.</li>
+                <li><h3>Wellness Coaching</h3> Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</li>
+                <li><h3>Mindfulness Resources</h3> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</li>
+                <li><h3>Support Groups</h3> Join peer support groups for shared experiences and collective coping strategies.</li>
+            </ul>
         </section>
 
         
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
-            <article>
-
-            </article>
             <ul>
-                <li><h3>Student Organizations:</h3> 
-                    Join one of the many student organizations to connect with peers who share your interests and passions.</li>
-                <li><h3>Arts and Culture:</h3> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
-                <li><h3>Career Services:</h3> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
-                <li><h3>Community Engagement:</h3> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
-                <li><h3>Housing and Dining:</h3> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
+                <li><h3>Student Organizations</h3> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
+                <li><h3>Arts and Culture</h3> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
+                <li><h3>Career Services</h3> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
+                <li><h3>Community Engagement</h3> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
+                <li><h3>Housing and Dining</h3> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
         </section>
         <!-- Content taken from ChatGPT 4.0 with the prompt, "I'm designing a website for university of michigan school of information. Help me write the body content for these 3 pages, about 500 words each. Study Spaces on campus, CAPS (Counseling and Psychological Services), Food Pantry (Maize & Blue Cupboard)"
         ChatGPT 4.0. (2024). [Large language model]. -->
     </main>
-    <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+    <footer class="footer-container">
+        
+        <article>
+            <img class="header-logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        </article>
+
+        <article>
+            <p class="footer-title">Site Pages</p>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "studyspaces.html">Study Spaces on Campus</a></li>
+                <li><a href = "foodpantry.html">Food Pantry</a></li>
+                <li><a href = "caps.html">CAPS</a></li>
+            </ul>
+        </article>
+
+        <article>
+            <p class="footer-title">UMSI Support</p>
+            <ul>
+                <li>
+                    <a href="https://mbc.studentlife.umich.edu/">Maize and Blue Cupboard Food Pantry</a>
+                </li>
+                <li>
+                    <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a>
+                </li>
+            </ul>
+        </article>
+
     </footer>
 </body>
 </html>
