--- a/caps.html
+++ b/caps.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Page 1</title>
+    <title>CAPS</title>
 </head>
 <body>
     <div class="skip">
         <a href="#main">Skip to Main Content</a>
     </div>
     <header class="header-container">
-        <nav>
+        <nav class="topBotomBordersIn">
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "studyspaces.html">Study Spaces on Campus</a></li>
@@ -34,7 +34,7 @@
             <p>
                 At the University of Michigan School of Information, we prioritize the mental health and well-being of our students through comprehensive support services offered by Counseling and Psychological Services (CAPS). CAPS is dedicated to addressing the emotional, psychological, and stress-related issues that students face during their time at the university.
             </p>
-            <img src="images/MENTAL-HEALTH-scaled.jpg" alt="CAPS logo">
+            <img src="images/MENTAL-HEALTH-scaled.jpg" alt="A line drawing showing a heart inside a person's brain">
 
         </section>
 
