--- a/studyspaces.html
+++ b/studyspaces.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Page 1</title>
+    <title>Study Spaces</title>
 </head>
 <body>
     <div class="skip">
         <a href="#main">Skip to Main Content</a>
     </div>
     <header class="header-container">
-        <nav>
+        <nav class="topBotomBordersIn">
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li class="active"><a href = "studyspaces.html">Study Spaces on Campus</a></li>
